# quiz-with-fingers-detector-opencv

./: CMakeLists.txt  FingersDetector.cpp  Question.cpp  Question.h  QuestionList.cpp  QuestionList.h  Questions.cpp  Quiz.cpp  Quiz.h  README.md  main.cpp  processing.cpp  processing.h  pytania_projekt.txt  pytania_projekt_film.txt  pytania_projekt_sport.txt  pytania_projekt_zwierzeta.txt  questions.cpp  questions.h
SFML/: Source.cpp
categories/: pytania_projekt.txt  pytania_projekt_film.txt  pytania_projekt_geografia.txt  pytania_projekt_zwierzeta.txt
imagesSfml/: baner2.jfif
src/: CategoryScreen.cpp  CategoryScreen.h  EndingScreen.cpp  EndingScreen.h  FingersDetector.cpp  FingersDetector.h  GameScreen.cpp  GameScreen.h  Question.cpp  Question.h  QuestionList.cpp  QuestionList.h  Quiz.cpp  Quiz.h  Screen.cpp  Screen.h  StartupScreen.cpp  StartupScreen.h  WaitingScreen.cpp  WaitingScreen.h  main.cpp
